Move dnd session log to actual posts

--- a/_posts/dnd/2014-09-11-session-3.md
+++ b/_posts/dnd/2014-09-11-session-3.md
@@ -1,7 +1,7 @@
 ---
 title: Dungeons & Dragons - Session 3 - Cragmaw Hideout (continued)
 layout: post
-date: 2014-09-11
+category: dnd
 ---
 
 In the previous session the party found a shortcut to the Dungeon Boss area and
