--- a/_posts/dnd/2014-10-07-session-4.md
+++ b/_posts/dnd/2014-10-07-session-4.md
@@ -1,7 +1,7 @@
 ---
 title: Dungeons & Dragons - Session 4 - Phandalin
 layout: post
-date:  2014-10-07
+category: dnd
 ---
 
 Start off making sure everyone levels up by rolling hit dice to increase their
