--- a/_posts/dnd/2014-08-22-session-2.md
+++ b/_posts/dnd/2014-08-22-session-2.md
@@ -1,7 +1,7 @@
 ---
 title: Dungeons & Dragons - Session 2 - Cragmaw Hideout
 layout: post
-date: 2014-08-22
+category: dnd
 ---
 
 ## Cragmaw Hideout
