--- a/_posts/dnd/2014-11-16-session-5.md
+++ b/_posts/dnd/2014-11-16-session-5.md
@@ -1,7 +1,7 @@
 ---
 title: Dungeons & Dragons - Session 5 - Phandalin / Redbrand Hideout
 layout: post
-date:  2014-11-16
+category: dnd
 ---
 
 ## Player Updates
