--- a/_posts/dnd/2014-12-07-session-6.md
+++ b/_posts/dnd/2014-12-07-session-6.md
@@ -1,7 +1,7 @@
 ---
 title: Dungeons & Dragons - Session 6 - Redbrand Hideout
 layout: post
-date:  2014-12-07
+category: dnd
 ---
 
 ### Slave Pens + Captives
