Black IPA update after kegging

--- a/brewing/_posts/2017-03-10-black-ipa.md
+++ b/brewing/_posts/2017-03-10-black-ipa.md
@@ -12,8 +12,8 @@ beer:
     OG-target: 1.064
     OG-actual: 1.062
     FG-target: 1.016
-    FG-actual:
-    abv-actual:
+    FG-actual: 1.012
+    abv-actual: 6.53
     IBUs: 36.6
     SRM: 71.4
 
@@ -62,3 +62,6 @@ calibration so I didn't get a pre-boil gravity reading.
 
 Fermentation was going strong by morning. I swapped the airlock for a blow-off
 tube just in time before the airlock clogged and blew to spray the ceiling.
+
+2017-3-1: Burst carbed a bit at 20psi before putting in kegerator at 12psi.
+May still take up to a week to come up to proper carbonation level.
